syntax = "proto3";
package grpc;
option java_package = "org.learnlib.modcon.driver";
option java_outer_classname = "ModConServiceProto";
option java_multiple_files = true;

// Server Interface Class
service ModCon {
  // Interface Method
  rpc SendTransaction (Transaction) returns (TransactionReceipt) {}
}

// Transaction (Request)
message Transaction {
  string uniqueId = 1;
  string method = 2;
  string parameters = 3;
}

// Transaction Receipt (Response)
message TransactionReceipt {
  string status = 1;
  string events = 2;
}
